--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,6 @@ spring.jpa.properties.hibernate.format_sql = false
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.hb2dll.auto = update
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
